# clothes

./: .gitignore  Cargo.toml  README.md
examples/: capsules.rs  depth_stack.rs  shapes.rs  simple.rs
src/: canvas.rs  lib.rs  main.rs
src/fonts/: ascii.rs  font_calculations.rs  mod.rs
src/graphics/: canvas.rs  mod.rs  pixel.rs
src/graphics/canvas/: conversions.rs  mod.rs
src/layout/: alignment.rs  geometry.rs  mod.rs  node.rs  size_resolution.rs  sized_node.rs  sizing.rs
src/layout/tests/: mod.rs  test_nodes.rs
src/layout/tests/snapshots/: clothes__layout__tests__test_nodes__horizontal_stack.snap  clothes__layout__tests__test_nodes__vertical_stack.snap
src/output/: mod.rs  ppm_output.rs
src/rendering/: canvas.rs  mod.rs
test_outputs/: horizontal_stack.ppm  vertical_stack.ppm
